// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouterContext should apply a hook for useLocation: location 1`] = `
{
  "_id": "c-679636502",
  "hash": "",
  "lorem": "ipsum",
  "search": "?lorem=ipsum",
}
`;

exports[`RouterContext should apply a hook for useNavigate: navigation dispatch 1`] = `
[
  [
    {
      "config": "rhods",
      "type": "SET_PRODUCT",
    },
  ],
  [
    {
      "config": "rhel",
      "type": "SET_PRODUCT",
    },
  ],
  [
    {
      "config": "rhel",
      "type": "SET_PRODUCT",
    },
  ],
]
`;

exports[`RouterContext should apply a hook for useNavigate: navigation push 1`] = `
[
  "./rhods?lorem=ipsum",
  "./rhel?lorem=ipsum",
  "./rhel?lorem=ipsum",
]
`;

exports[`RouterContext should apply a hook for useRouteDetail: document title 1`] = `
[
  [
    "t(curiosity-view.title, {"appName":"Subscriptions","context":"rhel"}) - Subscriptions",
    true,
  ],
]
`;

exports[`RouterContext should apply a hook for useRouteDetail: route details, closest 1`] = `
{
  "detailProps": [
    "_passed",
    "allConfigs",
    "availableVariants",
    "firstMatch",
    "errorRoute",
    "isClosest",
    "productGroup",
    "productConfig",
    "productPath",
    "productVariant",
  ],
  "firstMatch": [
    "aliases",
    "productGroup",
    "productId",
    "productLabel",
    "productPath",
    "productDisplay",
    "viewId",
    "productVariants",
    "query",
    "graphTallyQuery",
    "inventoryGuestsQuery",
    "inventoryHostsQuery",
    "inventorySubscriptionsQuery",
    "initialGraphFilters",
    "initialGraphSettings",
    "initialGuestsFilters",
    "initialInventoryFilters",
    "initialInventorySettings",
    "initialSubscriptionsInventoryFilters",
    "initialToolbarFilters",
  ],
  "isClosest": true,
  "productGroup": "rhel",
  "productPath": "l",
}
`;

exports[`RouterContext should apply a hook for useRouteDetail: route details, match 1`] = `
{
  "detailProps": [
    "_passed",
    "allConfigs",
    "availableVariants",
    "firstMatch",
    "errorRoute",
    "isClosest",
    "productGroup",
    "productConfig",
    "productPath",
    "productVariant",
  ],
  "firstMatch": [
    "aliases",
    "productGroup",
    "productId",
    "productLabel",
    "productPath",
    "productDisplay",
    "viewId",
    "productVariants",
    "query",
    "graphTallyQuery",
    "inventoryGuestsQuery",
    "inventoryHostsQuery",
    "inventorySubscriptionsQuery",
    "initialGraphFilters",
    "initialGraphSettings",
    "initialGuestsFilters",
    "initialInventoryFilters",
    "initialInventorySettings",
    "initialSubscriptionsInventoryFilters",
    "initialToolbarFilters",
  ],
  "isClosest": false,
  "productGroup": "rhel",
  "productPath": "rhel",
}
`;

exports[`RouterContext should apply a hook for useSearchParams: initial params 1`] = `
{
  "lorem": "ipsum",
}
`;

exports[`RouterContext should apply a hook for useSetRouteDetail: dispatch route config path 1`] = `
[
  [
    {
      "config": "dolor-sit",
      "type": "SET_PRODUCT",
    },
  ],
]
`;

exports[`RouterContext should return specific properties: specific properties 1`] = `
{
  "useLocation": [Function],
  "useNavigate": [Function],
  "useRouteDetail": [Function],
  "useSearchParams": [Function],
  "useSetRouteDetail": [Function],
}
`;
